Report label misaligned issue resolved

--- a/app/styles/components/class/analytics/performance/teacher/_gru-metrics-sub-header.scss
+++ b/app/styles/components/class/analytics/performance/teacher/_gru-metrics-sub-header.scss
@@ -30,6 +30,9 @@
     .morepaddingleft {
       padding-left: 75px;
     }
+    .newreportPadding {
+      padding-left: 10px;
+    }
     .reportPadding {
       padding-left: 79px;
     }
